tests/suite/snapshots/suite__check__tests__check__bad-array-size1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-array-size1.xi:5:10]
   │
 5 │   b: int["invalid"]
   ·          ────┬────  
   ·              ╰────── Expected int but found int[]
───╯

